03 September 2010 W. Michael Petullo <mike@flyn.org>

	* Fix license notice on several source files.

20 August 2010 W. Michael Petullo <mike@flyn.org>

	* Back out Alexandre's addition of itemid property from
	DAAPRecord. The itemid is the DMAPDb ID.

20 August 2010 Alexandre Rosenfeld <alexandre.rosenfeld@gmail.com>

	* Apply Alexandre Rosenfeld's DACP patch from Google Summer of
	Code 2010.

22 July 2010 W. Michael Petullo <mike@flyn.org>

	* Remove redundancy between dmap_connection_build_message()
	and dmap_connection_build_message().

04 June 2010 W. Michael Petullo <mike@flyn.org>

	* Add dmap_db_add_with_id() to DMAPDb interface.

	* dmap_container_record_get_entries() must not return a const
	because the return value should be free'd.

01 June 2010 W. Michael Petullo <mike@flyn.org>

	* Unref value returned by dmap_container_record_get_entries().

	* Free strings returned by g_object_get().

30 May 2010 W. Michael Petullo <mike@flyn.org>

	* Change lookup_by_path() to lookup_by_location().

29 May 2010 W. Michael Petullo <mike@flyn.org>

	* Add blob functions to DMAPRecord interface.

	* Add lookup_by_path() to DMAPDb.

	* Add add_path() to DMAPDb.

	* Ensure dmap_container_db_lookup_by_id(),
	dmap_container_record_get_id() and dmap_db_lookup_by_id() all
	deal with guint ids.

28 May 2010 W. Michael Petullo <mike@flyn.org>

	* Install dmap-md5.h.

27 May 2010 W. Michael Petullo <mike@flyn.org>

	* Fix crash upon finalizing DMAPShare that was caused by misuse of
	avahi_entry_group_free().

	* Increase the reference count of the databases passed to
	d[ap]ap_share_new().

	* dmap_db_lookup_by_id now takes a const DMAPDb *.

	* Add a _dmap_share_build_filter() prototype.

25 May 2010 W. Michael Petullo <mike@flyn.org>

	* Refactor build_filter into dmap_share_build_factor.

	* Begin naming D[AP]APRecord properties after DAAP keywords so
	that direct use of g_object_get can replace if/else or table
	lookups.
